--- a/Sobre.html
+++ b/Sobre.html
@@ -22,7 +22,7 @@
   <main>
   <nav class="navbar">
     <div class="logo">
-      <img src="img/logo.png" alt=""> <!-- coloque o caminho certo -->
+      <img src="logo.png" alt=""> <!-- coloque o caminho certo -->
     </div>
     <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
     <p>Especializada em veículos premium, garantindo qualidade, durabilidade e acabamento impecável.</p>
     <p>Com mais de <span>30 anos</span> de experiência, a Retok é referência em reforma de veículos premium, oferecendo serviços de estética automotiva, funilaria e pintura.</p>
     <p>Nossa equipe é altamente qualificada e constantemente treinada para oferecer o melhor atendimento e os melhores resultados para o seu veículo.</p>
-    <img src="img/Ariosto.png" alt="ariosto">
+    <img src="Ariosto.png" alt="ariosto">
   </div>
   <div class="ariosto">
 
