--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   </header>
   <div class="video-bg">
   <video autoplay muted loop playsinline>
-    <source src="img/videofundo.mp4" type="video/mp4">
+    <source src="videofundo.mp4" type="video/mp4">
     Seu navegador não suporta vídeo HTML5.
   </video>
   <nav class="navbar">
     <div class="logo">
-      <img src="img/logo.png" alt=""> <!-- coloque o caminho certo -->
+      <img src="logo.png" alt=""> <!-- coloque o caminho certo -->
     </div>
     <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
       <p>Soluções em Estética Automotiva,<br>Funilaria e Pintura em Goiânia GO</p>
       <div class="button-container">
         <a href="https://wa.me/5562991298281" target="_blank" class="btn-whatsapp">Fazer Orçamento</a>
-        <img src="img/zap.png" alt="WhatsApp" class="whatsapp-icon">
+        <img src="zap.png" alt="WhatsApp" class="whatsapp-icon">
     </div>
     </div>
   </section>
@@ -93,7 +93,7 @@
       <h1 class="numero">5,0</h1>
       <p class="titulo">Nota no Google</p>
       <div class="coluna imagem-celular">
-      <img src="img/celular.png" alt="">
+      <img src="celular.png" alt="">
     </div>
     </div>
 
@@ -102,10 +102,10 @@
      <h1 class="numero">+200</h1>
       <p class="titulo">Avaliações no Google</p>
       <div class="slider-avaliacoes">
-      <img src="img/Avaliacao1.JPG" class="print-avaliacao active" alt="Avaliação 1">
-      <img src="img/Avaliacao2.JPG" class="print-avaliacao" alt="Avaliação 2">
-      <img src="img/Avaliacao3.JPG" class="print-avaliacao" alt="Avaliação 3">
-      <img src="img/Avaliacao4.JPG" class="print-avaliacao" alt="Avaliação 4">
+      <img src="Avaliacao1.JPG" class="print-avaliacao active" alt="Avaliação 1">
+      <img src="Avaliacao2.JPG" class="print-avaliacao" alt="Avaliação 2">
+      <img src="Avaliacao3.JPG" class="print-avaliacao" alt="Avaliação 3">
+      <img src="Avaliacao4.JPG" class="print-avaliacao" alt="Avaliação 4">
 </div>
     </div>
   </div>
@@ -148,9 +148,9 @@
 <div class="carousel-section">
   <div class="carousel-container">
     <!-- Adicione suas imagens aqui -->
-    <img src="img/Fundo1.png" alt="Imagem 1" class="carousel-image">
-    <img src="img/Fundo2.jpg" alt="Imagem 2" class="carousel-image">
-    <img src="img/Fundo3.jpg" alt="Imagem 3" class="carousel-image">
+    <img src="Fundo1.png" alt="Imagem 1" class="carousel-image">
+    <img src="Fundo2.jpg" alt="Imagem 2" class="carousel-image">
+    <img src="Fundo3.jpg" alt="Imagem 3" class="carousel-image">
     <!-- Adicione mais imagens conforme necessário -->
   </div>
   <div class="text-overlay">
@@ -162,15 +162,15 @@
       </div>
       <div class="logos">
         <!-- Adicione os logos das marcas aqui -->
-        <img src="img/logo1.png" alt="Logo 1">
-        <img src="img/logo2.png" alt="Logo 2">
-        <img src="img/logo3.png" alt="Logo 3">
-        <img src="img/logo4.png" alt="Logo 4">
-        <img src="img/logo5.png" alt="Logo 5">
-        <img src="img/logo6.png" alt="Logo 5">
-        <img src="img/logo7.png" alt="Logo 5">
-        <img src="img/logo8.png" alt="Logo 5">
-        <img src="img/logo9.png" alt="Logo 5">
+        <img src="logo1.png" alt="Logo 1">
+        <img src="logo2.png" alt="Logo 2">
+        <img src="logo3.png" alt="Logo 3">
+        <img src="logo4.png" alt="Logo 4">
+        <img src="logo5.png" alt="Logo 5">
+        <img src="logo6.png" alt="Logo 5">
+        <img src="logo7.png" alt="Logo 5">
+        <img src="logo8.png" alt="Logo 5">
+        <img src="logo9.png" alt="Logo 5">
       </div>
     </div>
 </div>
@@ -199,11 +199,11 @@
 <div class="footer2">
 <div class="footer">
     <div class="logo-section">
-      <img src="img/Logo.png" alt="Logo Retok" id="retok-logo">
+      <img src="Logo.png" alt="Logo Retok" id="retok-logo">
       <div class="social-icons">
-        <img src="img/instagram.png" alt="Instagram">
-        <img src="img/facebook.png" alt="Facebook">
-        <img src="img/tiktok.png" alt="TikTok">
+        <img src="instagram.png" alt="Instagram">
+        <img src="facebook.png" alt="Facebook">
+        <img src="tiktok.png" alt="TikTok">
       </div>
     </div>
 
@@ -236,12 +236,12 @@
     <section class="location-container scroll-fade">
                     <h2>Nossa Localização</h2>
                     <p><i class="fa fa-map-marker"></i> Rua Miguel Angelo 288, Jardim Europa, Goiânia-GO</p>
-                    <img src="img/maps.png" alt="Instagram">
+                    <img src="maps.png" alt="Instagram">
                     <div class="fds">
                     <a href="https://www.google.com/maps/dir/?api=1&destination=Rua+Miguel+Angelo+288,+Jardim+Europa,+Goiânia,+GO" target="_blank">Abrir no Google Maps</a>
                     </div>
                     <div class="localiza">
-                    <img src="img/waze.png" alt="Waze">
+                    <img src="waze.png" alt="Waze">
                     <div class="fds">
                     <a href="https://www.waze.com/en/live-map/directions/br/go/r.-miguel-angelo,-288?place=ChIJhfLF5Iz2XpMRFD6vXmCSxec" target="_blank">Abrir no WAZE</a>
                     </div>  
