--- a/Servicos.html
+++ b/Servicos.html
@@ -8,7 +8,7 @@
   </header>
   <nav class="navbar">
     <div class="logo">
-      <img src="img/logo.png" alt=""> <!-- coloque o caminho certo -->
+      <img src="logo.png" alt=""> <!-- coloque o caminho certo -->
     </div>
     <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -24,11 +24,11 @@
 
     <div class="carrosel">
         <div class="container" id="img">
-           <img src="img/capitiva.jpg" alt=""height="600px" width="1000px">
-           <img src="img/gol.jpg" alt=""height="600px" width="800px">
-           <img src="img/jetta.jpg" alt=""height="600px" width="1000px">
-           <img src="img/sandero.jpg" alt=""height="600px" width="1000px">
-           <img src="img/uno.jpg" alt=""height="600px" width="1000px">
+           <img src="capitiva.jpg" alt=""height="600px" width="1000px">
+           <img src="gol.jpg" alt=""height="600px" width="800px">
+           <img src="jetta.jpg" alt=""height="600px" width="1000px">
+           <img src="sandero.jpg" alt=""height="600px" width="1000px">
+           <img src="uno.jpg" alt=""height="600px" width="1000px">
         </div>
     </div>
 </body>
