--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </video>
   <nav class="navbar">
     <div class="logo">
-      <img src="logo.png" alt=""> <!-- coloque o caminho certo -->
+      <img src="Logo.png" alt=""> <!-- coloque o caminho certo -->
     </div>
     <ul class="menu">
         <li><a href="index.html">Home</a></li>
